added comments, cleared formatting

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 </head>
 
 <body>
+    <!-- stopwatch image -->
     <i id="image-clock" class="fa-solid fa-stopwatch"></i>
 
+    <!-- stopwatch view -->
     <div id="stopwatch">
+        <!-- the content of the timer -->
         <div id="show">
             <span id="hour">00</span> <span id="separator">:</span>
             <span id="minute">00</span>:<span id="second">00</span>:<span id="ms">00</span>
         </div>
 
+        <!-- buttons -->
         <div>
             <button id="start">
                 Start
@@ -34,6 +38,7 @@
         </div>
     </div>
 
+    <!-- the three waves on the page -->
     <div>
         <div class="wave"></div>
         <div class="wave"></div>
